--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
     console.log(location.port);
-	var socket = io.connect('http://'+document.domain+':5000');
+	var socket = io.connect('http://192.168.1.130:5000');
     console.log(socket); 
 
 	socket.on('connect', function() {
