--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <title>Chat Room</title>
 <script type="text/javascript" src="https://cdn.socket.io/socket.io-3.0.5.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 </head>
 <body>
+	
 <script type="text/javascript">
 $(document).ready(function() {
     console.log(location.port);
