--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <html>
 <head>
 <title>Chat Room</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js" integrity="sha512-zN6KYOtONNTOGXz0RkWX2EpavN9VdIs+2w+To+fhciFv83YA9maUpi2lzZWrOfKXdFIZZomWufBznkyHi3a8oQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 </head>
 <body>
-	
 <script type="text/javascript">
 $(document).ready(function() {
     console.log(location.port);
-	var socket = io.connect('http://192.168.0.130:5000');
+	var socket = io.connect('http://'+document.domain+':'+location.port);
     console.log(socket); 
 
 	socket.on('connect', function() {
