--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
     console.log(location.port);
-	var socket = io.connect('http://192.168.0.130:3000');
+	var socket = io.connect('http://localhost:3000');
     console.log(socket); 
 
 	socket.on('connect', function() {
